[package]
name = "worlds"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.29.0"
vulkano-win = "0.29.0"
vulkano-shaders = "0.29.0"

bytemuck = "1.8.0"

winit = "0.26.1"
